prd/magnolia-author-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.kuboard.cn/workload: magnolia-author-backend
  labels:
    k8s.kuboard.cn/name: magnolia-author-backend
  name: magnolia-author-backend
  namespace: zb-schools
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.kuboard.cn/name: magnolia-author-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:41:20+08:00"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
        vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
        vault.hashicorp.com/log-level: "debug"
        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: magnolia-author-backend
    spec:
      expireAfter: Never
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: k8s.kuboard.cn/name
                  operator: In
                  values:
                  - magnolia-public-backend
                  - saas-homework-service
              topologyKey: kubernetes.io/hostname
      containers:
        - env:
            - name: TZ
              value: CST-8
            - name: BASE_URL
              value: "https://www.zbschools.sg/authorFrontend"
            - name: ENV_TYPE
              value: "prd"
            - name: INSTANCE_TYPE
              value: "magnoliaAuthor"
          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
          imagePullPolicy: IfNotPresent
          name: magolia-backend
          ports:
            - containerPort: 8080
              name: port8080
              protocol: TCP
          startupProbe:
            failureThreshold: 100000
            httpGet:
              path: >-
                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: >-
                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
              port: 8080
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: >-
                /magnoliaAuthor/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
              port: 8080
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "12"
              memory: 24Gi
            requests:
              cpu: "12"
              memory: 24Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aws-ecr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-account-sph-zb-schools
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: magnolia-author-backend-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    k8s.kuboard.cn/name: magnolia-author-backend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
