prd/magnolia-author-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: magnolia-author-frontend
  name: magnolia-author-frontend
  namespace: zb-schools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: magnolia-author-frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
      creationTimestamp: null
      labels:
        app: magnolia-author-frontend
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: magnolia-author-backend
              topologyKey: kubernetes.io/hostname
      containers:
        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-frontend"
          imagePullPolicy: IfNotPresent
          name: magnolia-author-frontend
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 50
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: confd
              subPath: default.conf
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aws-ecr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: default.conf
                path: default.conf
            name: author-nginx-conf
          name: confd
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: magnolia-author-frontend-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: magnolia-author-frontend
  sessionAffinity: None
