prd/magnolia-public-backend-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 2
  labels:
    k8s.kuboard.cn/name: magnolia-public-backend-sts
  name: magnolia-public-backend-sts
  namespace: zb-schools
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      k8s.kuboard.cn/name: magnolia-public-backend-sts
  serviceName: magnolia-public-backend-sts-svc
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-11-07T17:16:12+08:00"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
        vault.hashicorp.com/agent-inject-secret-kv-aksk: zb-schools/kv/aksk
        vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
        vault.hashicorp.com/log-level: debug
        vault.hashicorp.com/namespace: admin/engr/zb_schools/prd
        vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: magnolia-public-backend-sts
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s.kuboard.cn/name
                operator: In
                values:
                - magnolia-author-backend
                - magnolia-public-backend-sts
                - saas-homework-service
            topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: true
      containers:
      - env:
        - name: TZ
          value: CST-8
        - name: BASE_URL
          value: https://www.zbschools.sg
        - name: ENV_TYPE
          value: prd
        - name: INSTANCE_TYPE
          value: magnoliaPublic
        image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
            port: 8080
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: magolia-public
        ports:
        - containerPort: 8080
          name: port8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
            port: 8080
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
           cpu: "4"
              memory: 12Gi
            requests:
              cpu: "4"
              memory: 12Gi
        startupProbe:
          failureThreshold: 100000
          httpGet:
            path: /magnoliaPublic/.resources/defaultMagnoliaLoginForm/img/logo-magnolia.gif
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps/repositories
          name: pvc-mgnl-public
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: service-account-sph-zb-schools
      serviceAccountName: service-account-sph-zb-schools
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      name: pvc-mgnl-public
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
      storageClassName: gp2
      volumeMode: Filesystem     
---
apiVersion: v1
kind: Service
metadata:
  name: magnolia-public-backend-svc
  namespace: zb-schools
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: public
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    k8s.kuboard.cn/name: magnolia-public-backend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: magnolia-public-backend-sts-svc
  namespace: zb-schools
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: public
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s.kuboard.cn/name: magnolia-public-backend-sts
  sessionAffinity: None
  type: ClusterIP
