prd/magnolia-public-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    k8s.kuboard.cn/workload: magnolia-public-frontend
  labels:
    k8s.kuboard.cn/name: magnolia-public-frontend
  name: magnolia-public-frontend
  namespace: zb-schools
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s.kuboard.cn/name: magnolia-public-frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
        kubectl.kubernetes.io/restartedAt: "2024-06-26T13:53:43+08:00"
      creationTimestamp: null
      labels:
        k8s.kuboard.cn/name: magnolia-public-frontend
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s.kuboard.cn/name: saas-homework-service
                topologyKey: kubernetes.io/hostname
              weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s.kuboard.cn/name: magnolia-public-frontend
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - command:
            - bash
            - /code/scripts/cron-job.sh
          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-frontend"
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: volume-2hfc3
              subPath: default.conf
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aws-ecr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: default.conf
                path: default.conf
            name: public-nginx-conf
          name: volume-2hfc3
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: magnolia-public-frontend-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    k8s.kuboard.cn/name: magnolia-public-frontend
  sessionAffinity: None
