prd/magnolia-public-mobile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnolia-public-mobile
  namespace: zb-schools
  labels:
    app: nginx-mobile
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-mobile
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
      labels:
        app: nginx-mobile
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: magnolia-public-frontend
                topologyKey: kubernetes.io/hostname
              weight: 100
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app:  nginx-mobile
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile"
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: volume-conf
              subPath: default.conf
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: nginx-mobile.conf
                path: default.conf
            name: mobile-nginx-conf
          name: volume-conf
---
apiVersion: v1
kind: Service
metadata:
  name: magnolia-public-mobile-svc
  namespace: zb-schools
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-mobile
  sessionAffinity: None
