prd/saas-homework-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saas-homework-service
  name: saas-homework-service
  namespace: zb-schools
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: saas-homework-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        karpenter.sh/do-not-disrupt: "true"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
        vault.hashicorp.com/agent-inject-secret-kv-aksk: "zb-schools/kv/aksk"
        vault.hashicorp.com/log-level: "debug"
        vault.hashicorp.com/namespace: "admin/engr/zb_schools/prd"
      creationTimestamp: null
      labels:
        app: saas-homework-service
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - magnolia-author-backend
                  - magnolia-public-backend
                  - saas-homework-service
              topologyKey: kubernetes.io/hostname
      containers:
        - command:
            - /bin/bash
            - "-ce"
            - java  -Xms2g -Xmx4g -Dnewrelic.environment=prd -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar -server.tomcat.max-threads=1500
          image: "905418451605.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-homework-service"
          imagePullPolicy: IfNotPresent
          name: homework
          ports:
            - containerPort: 8080
              name: port8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: data/getCourseProject
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: "4"
              memory: 6Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aws-ecr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: service-account-sph-zb-schools
---
apiVersion: v1
kind: Service
metadata:
  namespace: zb-schools
  name: saas-homework-service-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: saas-homework-service
  sessionAffinity: None
