prd/tencent-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: magnolia-public-games-svc
  namespace: zb-schools
spec:
  ports:
    - name: ngames
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    k8s.kuboard.cn/name: tencent-games
  type: ClusterIP
  sessionAffinity: None
